...
            "state" : "translated",
            "value" : "Ajouter à Aero"
          }
        }
      }
    },
    "Add to Favorites" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Add to Favorites"
          }
...
            "state" : "translated",
            "value" : "Afficher les téléchargements"
          }
        }
      }
    },
    "Duplicate Tab" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Dupliquer l’onglet"
          }
...
            "state" : "translated",
            "value" : "Nouveau groupe"
          }
        }
      }
    },
    "New Group with Tab" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "New Group with Tab"
          }
...
            "state" : "translated",
            "value" : "Supprimer les cookies du site actuel. Cela peut vous déconnecter."
          }
        }
      }
    },
    "Rename Tab…" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Renommer l’onglet…"
          }
...
            "state" : "translated",
            "value" : "Ce fichier ne contient pas d’adresses web ni de mots de passe."
          }
        }
      }
    },
    "This page could not be opened" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "This page could not be opened"
          }
...
            "state" : "translated",
            "value" : "Annuler"
          }
        }
      }
    },
    "Ungroup" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ungroup"
          }
...
            "state" : "translated",
            "value" : "⌘Q demande une confirmation, pour qu’un raccourci malencontreux ne ferme jamais vos onglets."
          }
        }
      }
    },
    "Pin Tab" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Épingler l’onglet"
          }
...
